Add Settings for SpiralTask

--- a/Unit3.fmx
+++ b/Unit3.fmx
@@ -4,6 +4,7 @@ object Form3: TForm3
   Caption = #1053#1072#1089#1090#1088#1086#1081#1082#1080
   ClientHeight = 413
   ClientWidth = 582
+  StyleBook = Form1.StyleBook1
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
