--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -2,16 +2,16 @@ object Form1: TForm1
   Left = 0
   Top = 0
   Caption = 'NPE Studio'
-  ClientHeight = 319
-  ClientWidth = 471
+  ClientHeight = 418
+  ClientWidth = 568
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
   object Button1: TButton
-    Position.X = 15.000000000000000000
-    Position.Y = 112.000000000000000000
-    Size.Width = 81.000000000000000000
+    Position.X = 23.000000000000000000
+    Position.Y = 184.000000000000000000
+    Size.Width = 90.000000000000000000
     Size.Height = 25.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
@@ -20,18 +20,18 @@ object Form1: TForm1
   end
   object ComboBox1: TComboBox
     ItemIndex = 0
-    Position.X = 104.000000000000000000
-    Position.Y = 80.000000000000000000
-    Size.Width = 137.000000000000000000
-    Size.Height = 24.000000000000000000
+    Position.X = 121.000000000000000000
+    Position.Y = 136.000000000000000000
+    Size.Width = 128.000000000000000000
+    Size.Height = 25.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
     OnChange = ComboBox1Change
   end
   object Label1: TLabel
     StyledSettings = [Family, Style, FontColor]
-    Position.X = 8.000000000000000000
-    Position.Y = 80.000000000000000000
+    Position.X = 16.000000000000000000
+    Position.Y = 144.000000000000000000
     Size.Width = 97.000000000000000000
     Size.Height = 17.000000000000000000
     Size.PlatformDefault = False
@@ -41,8 +41,8 @@ object Form1: TForm1
   end
   object Label2: TLabel
     StyledSettings = [Family, Style, FontColor]
-    Position.X = 8.000000000000000000
-    Position.Y = 8.000000000000000000
+    Position.X = 16.000000000000000000
+    Position.Y = 56.000000000000000000
     Size.Width = 73.000000000000000000
     Size.Height = 17.000000000000000000
     Size.PlatformDefault = False
@@ -52,22 +52,30 @@ object Form1: TForm1
   end
   object Edit1: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
+    StyleLookup = 'editstyle'
     TabOrder = 6
     Text = #1042#1083#1072#1076#1080#1084#1080#1088
-    Position.X = 88.000000000000000000
-    Position.Y = 8.000000000000000000
+    Position.X = 96.000000000000000000
+    Position.Y = 56.000000000000000000
+    Size.Width = 105.000000000000000000
+    Size.Height = 25.000000000000000000
+    Size.PlatformDefault = False
   end
   object Edit2: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
+    StyleLookup = 'editstyle'
     TabOrder = 5
     Text = #1040#1085#1090#1080#1087#1086#1074
-    Position.X = 88.000000000000000000
-    Position.Y = 40.000000000000000000
+    Position.X = 97.000000000000000000
+    Position.Y = 89.000000000000000000
+    Size.Width = 104.000000000000000000
+    Size.Height = 25.000000000000000000
+    Size.PlatformDefault = False
   end
   object Label3: TLabel
     StyledSettings = [Family, Style, FontColor]
-    Position.X = 8.000000000000000000
-    Position.Y = 40.000000000000000000
+    Position.X = 16.000000000000000000
+    Position.Y = 88.000000000000000000
     Size.Width = 73.000000000000000000
     Size.Height = 17.000000000000000000
     Size.PlatformDefault = False
@@ -76,8 +84,8 @@ object Form1: TForm1
     TabOrder = 2
   end
   object MainMenu1: TMainMenu
-    Left = 304
-    Top = 96
+    Left = 344
+    Top = 128
     object MenuItem1: TMenuItem
       Text = 'File'
     end
@@ -86,9 +94,9 @@ object Form1: TForm1
     end
   end
   object Button2: TButton
-    Position.X = 104.000000000000000000
-    Position.Y = 112.000000000000000000
-    Size.Width = 80.000000000000000000
+    Position.X = 121.000000000000000000
+    Position.Y = 184.000000000000000000
+    Size.Width = 89.000000000000000000
     Size.Height = 25.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 8
